# heliochrome

./: Cargo.toml  LICENSE  README.md  build-web.bat
.cargo/: config
assets/: README.md
assets/bsdfs/: acrylic_felt_pink_rgb.bsdf  acrylic_felt_purple_rgb.bsdf  acrylic_felt_white_rgb.bsdf  cardboard_rgb.bsdf  cg_sunflower_rgb.bsdf  cm_toxic_green_rgb.bsdf  colodur_azure_4e_rgb.bsdf  colodur_connemara_4c_rgb.bsdf  ilm_l3_37_matte_rgb.bsdf  irid_flake_paint2_rgb.bsdf  leaf_maple_rgb.bsdf  paper_blue_rgb.bsdf  satin_purple_rgb.bsdf  satin_rosaline_rgb.bsdf  vch_dragon_eye_red_rgb.bsdf  vch_ultra_pink_rgb.bsdf
assets/scene/: cornell_box.hcy  cornell_monkey.hcy  orbs.hcy
driver/: Cargo.toml
driver/src/: lib.rs  main.rs  make_context.rs
heliochrome/: Cargo.toml
heliochrome/src/: bvh.rs  camera.rs  color.rs  context.rs  image.rs  lib.rs  load_obj.rs  loader.rs  object.rs  pdf.rs  scene.rs  tonemap.rs  transform.rs  util.rs
heliochrome/src/accel/: bvh.rs  mod.rs  unaccel.rs
heliochrome/src/hittables/: aabb.rs  hittable.rs  infinite_plane.rs  mesh.rs  mod.rs  rect.rs  sdf.rs  sphere.rs  triangle.rs
heliochrome/src/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  measured.rs  metal.rs  mod.rs  scatterable.rs
heliochrome/src/maths/: marginal2d.rs  matrix2.rs  matrix4.rs  misc.rs  mod.rs  onb.rs  vector2.rs  vector3.rs  vector4.rs
heliochrome/src/sdf/: mod.rs
heliochrome/src/sdf/operations/: difference.rs  intersection.rs  mod.rs  modulo.rs  smooth_difference.rs  smooth_intersection.rs  smooth_union.rs  twist.rs
heliochrome/src/sdf/primitives/: aab.rs  mandel_bulb.rs  mod.rs  sphere.rs  torus.rs
heliochromy/: Cargo.toml
heliochromy/src/: main.rs
src/: color.rs  context.rs  lib.rs  load_obj.rs  main.rs  make_context.rs
src/heliochrome/: bvh.rs  camera.rs  color.rs  context.rs  image.rs  mod.rs  object.rs  transform.rs
src/heliochrome/hittables/: aabb.rs  hittable.rs  hittable_list.rs  infinite_plane.rs  mesh.rs  mod.rs  rect.rs  sphere.rs  triangle.rs
src/heliochrome/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs  scatterable.rs
src/heliochrome/maths/: matrix3.rs  misc.rs  mod.rs  ray.rs  vector2.rs  vector3.rs
src/heliochrome/objects/: hittable.rs  hittable_list.rs  mod.rs  sphere.rs
src/maths/: misc.rs  size.rs
src/objects/: mod.rs
web/: index.html
