[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heliochrome = {path = "../heliochrome"}
indicatif = "0.17.0"
env_logger = "0.9.0"
pollster = "0.2.5"
softbuffer = "0.1.1"
instant = "0.1.12"
log = "0.4.17"
eframe = "0.19.0"
egui_dock = "0.2.1"
# glium = { version = "0.30.2", default-features = true }
# imgui = {version = "0.8.2", features = ["tables-api"]}
# imgui-glium-renderer = "0.8.2"
# imgui-winit-support = "0.8.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
# wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
getrandom = { version = "0.2.7", features = ["js"] }
