[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heliochrome = {path = "../heliochrome"}
indicatif = "0.17.0"
env_logger = "0.9.0"
pollster = "0.2.5"
softbuffer = "0.1.1"
instant = "0.1.12"
log = "0.4.17"
eframe = "0.19.0"
egui_dock = "0.2.1"